--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <label for="favanimal" class="form-label">Favorite Animal</label>
                     <input type="text" class="form-control" id="favanimal" placeholder="Enter Your Favorite Animal">
                 </div>
-                <button type="submit" class="btn btn-primary w-100" id="btn"> </button>
+                <button type="submit" class="btn btn-primary w-100" id="btn" onclick="genFullName"> </button>
             </form>
         </div>
 
